--- a/css/index.css
+++ b/css/index.css
@@ -373,7 +373,7 @@ a{
     color: rgb(240,240,240,.6);
     font-size: 50px;
     font-weight: 200;
-    font-family:camel;
+    font-family: "Roboto";
     transition: all .4s ease;
     z-index: 3;
     position: relative;
