--- a/css/index.css
+++ b/css/index.css
@@ -56,13 +56,6 @@ BLOG-SINGLE
 ------------------------------------------*/
 
 
-
-
-
-
-
-
-
 /*====================================
 COMMON
 ====================================*/
@@ -412,11 +405,10 @@ a{
   }
 .navigation-logo{
     position: absolute;
-    left:5%;
-    top:5%;
-    font-family: josefin sans;
-    font-size: 20px;
+    width: 200px;
+    height: 100px;
 }
+
 .navigation-content .opacity{
     opacity: 0;
 }
@@ -753,22 +745,6 @@ INDEX ONE
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
  /*====================================
 ABOUT ONE
 ====================================*/
@@ -849,20 +825,6 @@ ABOUT ONE
  /*====================================
 ABOUT ONE
 ====================================*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -975,178 +937,6 @@ SONGS ONE
  /*====================================
 SONGS ONE
 ====================================*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- /*====================================
-BLOG ONE
-====================================*/
-
-#blog-one{
-    background:url(../images/blog-bg.JPG);
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    min-height: 100vh;
-    position: relative;
-    width: 100%;
-    overflow: hidden;
-}
-#blog-one::after{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-    background:rgb(0,0,0,.2);
-}
-
-#blog-one .blog-one-heading{
-    position: relative;
-    text-align: center;
-    padding: 50px;
-    letter-spacing: 1.7px;
-    padding-top: 80px;
-    z-index: 2;
-    opacity: .9;
-    font-size: 45px;
-    font-weight: 600;
-    font-family: Monument;
-}
-#blog-one #blogs-container{
-    position: relative;
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-#blog-one .blog{
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: center;
-    background: rgb(240,240,240,.1);
-    backdrop-filter: blur(10px);
-    padding: 20px;
-    width: auto;
-    margin: 20px;
-    overflow: hidden;
-    color: rgb(240,240,240);
-    font-family: poppins;
-    border-radius: 10px;
-}
-
-#blog-one .blog-img{
-    width: auto;
-    height: 300px;
-    overflow: hidden;
-    border-radius: 10px;
-    position:relative;
-}
-#blog-one .blog-img img{
-    width: auto;
-    height: 300px;
-}
-#blog-one .blog-text{
-    width: auto;
-    max-width: 500px;
-    padding: 40px;
-    padding-bottom: 0px;
-    text-align: left;
-}
-#blog-one .blog-date{
-    position: absolute;
-    padding: 5px;
-    top: 5%;
-    right: 5%;
-}
-#blog-one .blog-heading{
-    font-size: 22px;
-    padding: 5px;
-}
-#blog-one .blog-description{
-    font-size: 15px;
-    padding: 5px;
-    opacity: .8;
-}
-#blog-one .blog-read-more{
-    position: absolute;
-    bottom: 0%;
-    border-radius: 4px;
-    cursor: pointer;
-    right: 0%;
-    padding: 10px;
-    transition: all .2s ease;
-}
-#blog-one .see-more-button button{
-    background: rgb(240,240,240,.1);
-    backdrop-filter: blur(20px);
-    padding: 15px 30px;
-    border: none;
-    width: auto;
-    margin: 20px;
-    font-size: 16px;
-    color: rgb(240,240,240);
-    cursor: pointer;
-    transition: all .2s ease;
-}
-#blog-one .see-more-button button:hover{
-    background: rgb(240,240,240,.25);
-}
-#blog-one .blog-info{
-    position: relative;
-    display: flex;
-    flex-direction: row;
-}
-#blog-one .blog-duration , #blog-one .blog-type{
-padding: 10px;
-padding-top: 20px;
-font-size: 15px;
-display: flex;
-align-items: center;
-justify-content: center;
-opacity: .9;
-}
-
-
-
-
- /*====================================
-BLOG ONE
-====================================*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
  /*====================================
@@ -1311,161 +1101,6 @@ CONTACT ONE
  /*====================================
 CONTACT ONE
 ====================================*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- /*====================================
-BLOG-SINGLE-ONE
-====================================*/
-
-#blog-single{
-    height: auto;
-    min-height: 100vh;
-    width: 100%;
-    overflow: hidden;
-    background: #080808;
-    color: rgb(240,240,240);
-}
-#blog-single .center{
- text-align: center;
- align-items: center;
- 
-}
-#blog-single .blog-img{
-    width: 65%;
-    height:auto;
-  position: relative;
-}
-#blog-single .blog-img img{
-  height: auto;
-  position: relative;
-  width: 100%;
-}
-#blog-single .blog-info{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content:center;
-}
-#blog-single .blog-info-content{
-    width: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    padding-left: 0;
-    padding-right: 0;
-    font-family: poppins
-}
-#blog-single .blog-duration,.blog-type{
-font-size: 18px;
-display: flex;
-align-items: center;
-justify-content: center;
-opacity: .9;
-}
-#blog-single .blog-text{
-    height: auto;
-    padding: 30px;
-    padding-left: 0;
-    padding-right: 0;
-    font-family: poppins;
-    width: 65%;
-  position: relative;
-  font-size: 17px;
-  font-weight: 400;
-  text-align: left;
-  margin: 10px;
-  margin-top: 0px;
-}
-#blog-single .blog-heading{
-    font-size: 30px;
-    opacity: .8;
-}
-#blog-single .center-para{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-#blog-single .para{
-    margin-top: 30px;
-    opacity: .6;
-}
-#blog-single .italic{
-    opacity: .6;
-}
-#blog-single .blog-text-img{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content:space-between;
-    align-items: center;
-    overflow: hidden;
-    position: relative;
-    margin-top: 30px;
-}
-#blog-single .blog-text-img img{
-    width: 95%;
-    height: auto;
-}
-#blog-single .signature{
-        padding: 0px;
-        opacity: .8;
-        z-index: 2;
-        font-family: night;
-        text-align: center;
-        color:rgb(240,240,240,.9);
-        padding: 20px;
-        font-size: 48px;
-}
-#blog-single .blog-info{
-    display: flex;
-    justify-content: space-between;
-    padding-top: 0px;
-    padding-bottom: 5px;
-    font-size: 16px;
-    opacity: .6;
-}
-#blog-single .blog-duration{
-    font-size: 16px;
-}
-
-#blog-single .share-links ul{
-    display: flex;
-
-}
-#blog-single .share-links ul li{
-    padding-right: 15px;
-    font-size: 20px;
-}
- /*====================================
-BLOG-SINGLE-ONE
-====================================*/
-
-
-
-
-
-
-
-
-
-
-
 
 
 /*=========================================== RESPONSIVE =========================================*/
@@ -1661,21 +1296,6 @@ ABOUT-ONE
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*====================================
 SONGS ONE
 ====================================*/
@@ -1695,107 +1315,6 @@ SONGS ONE
 /*====================================
 SONGS ONE
 ====================================*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
-/*====================================
-BLOG-ONE
-====================================*/
-
-#blog-one{
-    height: auto;
-    min-height: 100vh;
-    width: 100%;
-    overflow: hidden;
-    background: url(../images/blog-bg.JPG);
-     background-position: center;
-     background-attachment: fixed;
-     background-size: cover;
-}
-#blog-one .blog{
-    flex-direction: column;
-    padding: 12px;
-    width: 85%;
-    margin: 12px;
-}
-#blog-one .blog-one-heading{
-    font-size: 35px;
-
-  }
-  #blog-one .blog-read-more{
-    bottom: 0%;
-    right: 0%;
-}
-#blog-one .blog-date{
-  display: none;
-}
-#blog-one .blog-img{
-    width: 100%;
-    max-width: 400px;
-    height: auto;
-    overflow: hidden;
-    border-radius: 10px
-}
-#blog-one .blog-img img{
-    width: 100%;
-    height: auto;
-    max-width: 400px;
-    border-radius: 10px
-}
-#blog-one .blog-text{
-    width: auto;
-    max-width: 500px;
-    padding: 10px;
-    text-align: left;
-}
-#blog-one .blog-heading{
-    font-size: 18px;
-    padding: 5px;
-}
-#blog-one .blog-description{
-    font-size: 14px;
-    padding: 5px;
-    opacity: .8;
-    padding-bottom: 20px;
-}
-#blog-one .blog-duration , #blog-one .blog-type{
-    font-size: 14px;
-    }
-
-
-/*====================================
-BLOG-ONE
-====================================*/
-
-
-
-
-
-
-
-
-
 
 
 /*====================================
@@ -1840,79 +1359,7 @@ width: 100%;
 CONTACT-ONE
 ====================================*/
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- /*====================================
-BLOG-SINGLE-ONE
-====================================*/
-
-#blog-single .blog-img{
-    width: 90%;
-    height:auto;
-  position: relative;
 }
-#blog-single .blog-img img{
-  height: auto;
-  position: relative;
-  width: 100%;
-}
-
-#blog-single .blog-text{
-    padding: 0px;
-    width: 90%;
-}
-#blog-single .para{
-    margin-top: 20px;
-    font-size: 16px;
-}
-#blog-single .italic{
-  font-size: 16px;
-}
-#blog-single .blog-text-img{
-   flex-direction: column;
-}
-#blog-single .signature{
-    font-size: 40px;
-}
-
- /*====================================
-BLOG-SINGLE-ONE
-====================================*/
-
-
-
-
-
-
-
-
-
-
-
-
-}
-
-
-
-
-
-
-
-
 
 
 
@@ -1981,67 +1428,6 @@ SONGS ONE
 SONGS ONE
 ======================================================================= */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*=======================================================================
-BLOG ONE
-======================================================================= */
-
-
-#blog-one .blog{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    background: rgb(240,240,240,.1);
-    backdrop-filter: blur(10px);
-    padding: 12px;
-    width: auto;
-    margin: 12px;
-    overflow: hidden;
-    color: rgb(240,240,240);
-    font-family: poppins;
-    border-radius: 10px;
-}
-#blog-one .blog-date{
-    display: none;
-}
-#blog-one .blog-read-more{
-    bottom: 0%;
-    right: 0%;
-}
-
-
-/*=======================================================================
-BLOG ONE
-======================================================================= */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*====================================
 CONTACT-ONE
 ====================================*/
@@ -2062,53 +1448,4 @@ CONTACT-ONE
 /*====================================
 CONTACT-ONE
 ====================================*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- /*====================================
-BLOG-SINGLE-ONE
-====================================*/
-
-#blog-single .blog-img{
-    width: 70%;
-    height:auto;
-  position: relative;
-}
-#blog-single .blog-img img{
-  height: auto;
-  position: relative;
-  width: 100%;
-}
-
-#blog-single .blog-text{
-    padding: 10px;
-    width: 70%;
-}
-#blog-single .para{
-    margin-top: 20px;
-}
-#blog-single .italic{
-    opacity: .8;
-  font-size: 16px;
-}
-
-
-
- /*====================================
-BLOG-SINGLE-ONE
-====================================*/
-
-
-
 }
