--- a/css/index.css
+++ b/css/index.css
@@ -314,7 +314,7 @@ a{
 }
 .social-media-links-navigation{
     position: absolute;
-    right: 0;
+    right: 20px;
     bottom: 0%;
     height: 12vh;
     width: 20%;
